# drf-lms-platform

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data.json  docker-compose.yaml  dump.rdb  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
courses/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_options_alter_lesson_options.py  0005_course_public_id_lesson_public_id.py  0006_alter_course_public_id_alter_lesson_public_id.py  0007_lessonprogress.py  0008_quizansweroption_quiz_quizattempt_quizquestion_and_more.py
deploy/nginx/: api-lingloop.conf
templates/: reset_password.html
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_payment.py  0004_alter_payment_options_payment_stripe_checkout_url_and_more.py
users/services/: stripe_service.py
